# mnist-inference-service

./: LICENSE  README.md  main.py  pyproject.toml
notebooks/: classification.ipynb  inference.ipynb
weights/: mnist_model.pth
